force-app/main/default/objects/Audit_Log_Report__c/Audit_Log_Report__c.object-meta.xml
<CustomObject>
    <label>Audit Log Report</label>
    <nameField>
        <displayFormat>ALR-{00000}</displayFormat>
        <label>Audit Log Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Log Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>