force-app/main/default/objects/Audit_Log_Report__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <inlineHelpText>The full description of changes made in Setup</inlineHelpText>
    <label>Display</label>
    <length>50768</length>
    <type>LongTextArea</type>
</CustomField>