force-app/main/default/objects/Audit_Log_Report__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <formula>TEXT( DATETIMEVALUE( Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identifier</label>
    <type>Text</type>
</CustomField>