force-app/main/default/objects/Audit_Log_Report__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <inlineHelpText>The section in the Setup menu where the action occurred</inlineHelpText>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>